src/styles/profile.scss
.profile-card-panel {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  border-radius: 0.25rem;
  background: $bg-base;

  position: relative;

  max-width: 20rem;

  .profile-edit-button {
    display: flex;
    padding: 0.25rem;
    align-items: center;
    gap: 0.25rem;

    border-radius: 0.125rem;
    border: 1px solid $input-outline;
    background: $input-regular;
  }

  .header {
    margin-top: 80px;
    display: flex;
    padding: 0 1rem 0 0.7rem;
    justify-content: space-between;
    align-items: center;
    z-index: 1;

    align-self: stretch;

    .left {
      display: flex;
      align-items: center;
      gap: 0.625rem;
      flex: 1 0 0;

      .left-col {
        display: flex;
        flex-direction: column;
        align-items: flex-start;

        .top {
          display: flex;
          align-items: center;
          gap: 0.125rem;

          color: $text-black;
          font-family: Inter;
          font-size: 0.875rem;
          font-weight: 500;
          letter-spacing: -0.0175rem;
        }

        .bottom {
          color: $text-lighter;
          font-family: Inter;
          font-size: 0.625rem;
          font-weight: 500;
          letter-spacing: -0.0125rem;
        }
      }
    }
  }

  .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 0.5rem;
    align-self: stretch;

    color: $text-black;
    font-family: Inter;
    font-size: 0.625rem;
    font-weight: 400;
    line-height: 125%;
    letter-spacing: -0.0125rem;

    .footer-split {
      display: flex;
      align-items: center;
      align-content: center;
      gap: 0.25rem 0.75rem;
      align-self: stretch;
      flex-wrap: wrap;

      .footer-group {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 0.375rem;

        color: $text-black;
        font-family: Inter;
        font-size: 0.625rem;
        font-weight: 500;
        letter-spacing: -0.0125rem;
      }
    }
  }
  .profile-banner {
    display: flex;
    height: 7.5rem;
    width: 100%;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    align-self: stretch;

    border-radius: 0.125rem;
    position: absolute;
    top: 0rem;
    left: 0rem;
    object-fit: cover;
  }

  .styled-dent {
    height: 4rem;
    width: 100%;

    flex-shrink: 0;
    align-self: stretch;

    position: absolute;
    top: 80px;
    left: 0;
    z-index: 0;
  }

  .flag-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    align-self: stretch;
    gap: 0.5rem;
    .flag-column {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      gap: 0.375rem;
      flex: 1 0 0;

      .flag-head {
        display: flex;
        align-items: center;
        gap: 0.25rem;

        color: $text-black;
        font-family: Inter;
        font-size: 0.625rem;
        font-weight: 500;
        letter-spacing: -0.0125rem;
      }

      .flag-container {
        display: flex;
        align-items: center;
        align-content: center;
        gap: 0.25rem;
        align-self: stretch;
        flex-wrap: wrap;

        .flag {
          display: flex;
          width: 2rem;
          height: 1.125rem;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          gap: 0.625rem;

          border-radius: 0.125rem;
        }
      }
    }
  }
  .profile-divider {
    width: 100%;
    height: 0.0625rem;
    background: $bg-divider;
  }
}

.media-panel {
  display: flex;
  padding: 1rem;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.75rem;
  align-self: stretch;

  border-radius: 0.25rem;
  background: $bg-base;

  .header-row {
    display: flex;
    align-items: center;
    gap: 1rem;
    align-self: stretch;
    span {
      flex: 1 0 0;

      color: $text-black;
      font-family: Inter;
      font-size: 0.625rem;
      font-weight: 500;
      letter-spacing: -0.0125rem;
    }
  }

  .media-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 4rem);
    gap: 0.25rem;
    align-items: center;
    align-self: stretch;

    .media-container {
      width: 4rem;
      height: 4rem;
      background-color: $bg-pressed;

      .media {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
      }

      .overlay {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.5);
        opacity: 0;
        transition: opacity 0.3s ease;
      }

      :hover.overlay {
        opacity: 0.7;
      }
    }
  }

  .media-max-wrapper {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 0.25rem;
    align-self: stretch;
    align-items: center;
    max-height: 24rem;
    overflow-y: auto; 
    scrollbar-width: thin;

    .media {
      width: 6rem;
      height: 6rem;
      background-color: $bg-pressed;
    }
  }
}

.comments-panel {
  display: flex;
  padding: 1rem;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.5rem;
  align-self: stretch;

  border-radius: 0.25rem;
  background: $bg-base;

  color: $text-black;
  font-family: Inter;
  font-size: 0.625rem;
  font-weight: 500;
  letter-spacing: -0.0125rem;

  .comment-container {
    align-self: stretch;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0rem;
    align-self: stretch;

    color: $text-black;
    font-family: Inter;
    font-size: 0.625rem;
    font-weight: 500;
    line-height: 138%; /* 0.8625rem */
    letter-spacing: -0.0125rem;

    .community {
      display: flex;
      align-items: center;
      gap: 0.375rem;
      align-self: stretch;

      .community-name {
        color: $text-black;
        font-family: Inter;
        font-size: 0.5rem;
        font-weight: 500;
        letter-spacing: -0.01rem;
      }
      .community-handle {
        color: $text-lightest;
        font-family: Inter;
        font-size: 0.5rem;
        font-weight: 500;
        letter-spacing: -0.01rem;
      }
    }

    .content {
      color: $text-black;
      font-family: Inter;
      font-size: 0.625rem;
      font-weight: 500;
      line-height: 138%; /* 0.8625rem */
      letter-spacing: -0.0125rem;

      align-self: stretch;
    }

    .footer {
      color: $text-black;
      font-family: Inter;
      font-size: 0.5rem;
      font-weight: 400;
      letter-spacing: -0.01rem;

      align-self: stretch;
    }
  }
}

.right-footer {
  display: flex;
  padding: 1rem;
  flex-direction: row;
  align-items: flex-start;
  gap: 0.2rem;

  color: $text-black;
  font-family: Inter;
  font-size: 0.625rem;
  font-weight: 500;
  flex-wrap: wrap;
}

